# CircularBuffer

./: README.md
Task1CircularBuffer/: CMakeLists.txt  Task1CircularBuffer.sln
Task1CircularBuffer/Task1CircularBuffer/: CircularBuffer.cpp  CircularBuffer.h  CircularBufferTests.cpp  Task1CircularBuffer.vcxproj  Task1CircularBuffer.vcxproj.filters  main.cpp
Task1CircularBuffer/Task1CircularBuffer/x64/Debug/: Task1CircularBuffer.exe.recipe  Task1CircularBuffer.vcxproj.FileListAbsolute.txt  vc143.idb
Task1CircularBuffer/Task1CircularBuffer/x64/Debug/Task1Cir.39b5170b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Task1CircularBuffer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
